--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # Dependency Injection
+  get_it: ^7.6.4
+
+  # Routing
+  go_router: ^17.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
