update setup mobx thema

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,18 @@ dependencies:
   # Routing
   go_router: ^17.0.0
 
+  #Shared Preferences
+  shared_preferences: ^2.5.3
+
+  # State Management
+  mobx: ^2.6.0
+  flutter_mobx: ^2.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.8
+  mobx_codegen: ^2.6.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
