--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   #Dio
   dio: ^5.9.1
 
+  # Drift Local Database
+  drift: ^2.31.0
+
   # RxDart
   rxdart: ^0.28.0
 
@@ -57,11 +60,19 @@ dependencies:
   # Environment Variables
   flutter_dotenv: ^6.0.0
 
+  # Path Provider
+  path_provider: ^2.1.3
+
+  # Path
+  path: ^1.9.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.4.8
   mobx_codegen: ^2.6.0
+  drift_dev: ^2.31.0
+  sqlite3_flutter_libs: ^0.5.20
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
